Added 'file' command to the console and refactored the filer class to work better with the console. The 'file' methods of the Filer class now use 'source' and 'destination' parameters.

--- a/descatter/data/descatter.ini
+++ b/descatter/data/descatter.ini
@@ -8,9 +8,11 @@ ConsoleArgumentHelp = 'Starts the descatter interactive console'
 [Console]
 Introduction = Welcome to the descatter interactive console!
 Prompt = descatter:
-Description = The interactive console for the descatter application
 ShortPrefix = -
 LongPrefix = --
+FileCommandDescription = Files a source to a destination
+SourceArgumentHelp = The file, the list of files, or the folder to be filed
+DestinationArgumentHelp = The folder where the source will be filed
 DirectiveArgumentShortName = d
 DirectiveArgumentLongName = directive
 DirectiveArgumentHelp = Defines the directive to use when filing 
