Finished implement simple interactive console interface to use the Filer. The interface has not been tested, but a help function has been implemented and the command has been fully implemented. Unit tests have not be written for the interface.

--- a/descatter/data/descatter.ini
+++ b/descatter/data/descatter.ini
@@ -1,8 +1,8 @@
 [CommandLine]
 ShortPrefix = -
 LongPrefix = --
-ConsoleArgumentShortName = c
-ConsoleArgumentLongName = console
+ConsoleArgumentShortName = i
+ConsoleArgumentLongName = interactive
 ConsoleArgumentHelp = 'Starts the descatter interactive console'
 
 [Console]
@@ -10,9 +10,19 @@ Introduction = Welcome to the descatter interactive console!
 Prompt = descatter:
 ShortPrefix = -
 LongPrefix = --
-FileCommandDescription = Files a source to a destination
-SourceArgumentHelp = The file, the list of files, or the folder to be filed
+FileCommandProg = file
+FileCommandDescription = Files a source to a destination based on a directive. The directive is saved as the default directive after successful completion of the command.
+SourceArgumentHelp = A file path, a comma-separated list of file paths, or a folder path to be filed
 DestinationArgumentHelp = The folder where the source will be filed
+HelpArgumentLongName = help
+HelpArgumentShortName = h
+HelpArgumentHelp = Shows this message and does NOT execute the file.
 DirectiveArgumentShortName = d
 DirectiveArgumentLongName = directive
-DirectiveArgumentHelp = Defines the directive to use when filing 
+DirectiveArgumentHelp = Defines the directive to use when filing. The most recent past directive will be used for the filing if this argument is omitted.
+RecursiveArgumentLongName = recursive
+RecursiveArgumentShortName = r
+RecursiveArgumentHelp = Files all files in every sub-folder if the source is a folder
+MoveArgumentLongName = move
+MoveArgumentShortName = m
+MoveArgumentHelp = Moves the source to the destination, which deletes the source after copying to the destination 
