--- a/descatter/data/descatter.ini
+++ b/descatter/data/descatter.ini
@@ -8,21 +8,30 @@ ConsoleArgumentHelp = 'Starts the descatter interactive console'
 [Console]
 Introduction = Welcome to the descatter interactive console!
 Prompt = descatter:
-ShortPrefix = -
-LongPrefix = --
+Prefix = -
 FileCommandProg = file
 FileCommandDescription = Files a source to a destination based on a directive. The directive is saved as the default directive after successful completion of the command.
 SourceArgumentHelp = A file path, a comma-separated list of file paths, or a folder path to be filed
 DestinationArgumentHelp = The folder where the source will be filed
 HelpArgumentLongName = help
 HelpArgumentShortName = h
-HelpArgumentHelp = Shows this message and does NOT execute the file.
+HelpArgumentHelp = Shows this message and does NOT execute the command.
 DirectiveArgumentShortName = d
 DirectiveArgumentLongName = directive
 DirectiveArgumentHelp = Defines the directive to use when filing. The most recent past directive will be used for the filing if this argument is omitted.
 RecursiveArgumentLongName = recursive
 RecursiveArgumentShortName = r
-RecursiveArgumentHelp = Files all files in every sub-folder if the source is a folder
+RecursiveArgumentHelp = Files all files in every sub-folder if the source is a folder.
 MoveArgumentLongName = move
 MoveArgumentShortName = m
-MoveArgumentHelp = Moves the source to the destination, which deletes the source after copying to the destination 
+MoveArgumentHelp = Moves the source to the destination, which deletes the source after copying to the destination.
+NameArgumentLongName = name
+NameArgumentShortName = n
+NameArgumentHelp = Defines the directive by its name in the history of recently used directives.
+VerboseArgumentLongName = verbose
+VerboseArgumentShortName = v
+VerboseArgumentHelp = Displays additional status information during and after filing.
+HistoryCommandProg = history
+HistoryCommandDescription = Displays a list of recently used directives that can be called by name in the 'file' command.
+HistoryTableNameColumn = Name
+HistoryTableFilePathColumn = File Path
