Refactored code to work with cx_Freeze for creating standalone executables for deployment. This involved implementing a 'setup.py' script for cx_Freeze and moving files around. The 'data' folder will eventually be removed after implementing the new SQL database but I want to keep the old database file for reference at the moment. The directives have been moved to the top level folder and the configuration file 'descatter.ini' has as well. This allows cx_Freeze to place these folders and files in the appropriate build folder, which can be zipped and deployed. The MSI build has not been tested. The constants.py file has been removed and the constants have been placed in the package __init__.py file since they are used throughout the package. I am still trying to figure out the best way to handle importing at the package and module level, but I copied the style and format of the cx_Freeze program, which appears to be better for desktop/command line applications written in Python. However, Pydev now shows a bunch of import errors, but the application still runs as a python script or a standalone executeable.

--- a/descatter.ini
+++ b/descatter.ini
@@ -9,6 +9,7 @@ ConsoleArgumentHelp = 'Starts the descatter interactive console'
 Introduction = Welcome to the descatter interactive console!
 Prompt = descatter:
 Prefix = -
+DefaultDirective = default.xml
 FileCommandProg = file
 FileCommandDescription = Files a source to a destination based on a directive. The directive is saved as the default directive after successful completion of the command.
 SourceArgumentHelp = A file path, a comma-separated list of file paths, or a folder path to be filed
