Added the 'recent' command to display the most recently used directive in the interactive console. Added the 'verbose' and 'absolute' arguments to all console commands to display additional information during execution of the command and to display all paths in an absolute path format.

--- a/descatter.ini
+++ b/descatter.ini
@@ -1,9 +1,28 @@
 [CommandLine]
 ShortPrefix = -
 LongPrefix = --
+DefaultDirective = default.xml
 ConsoleArgumentShortName = i
 ConsoleArgumentLongName = interactive
-ConsoleArgumentHelp = 'Starts the descatter interactive console'
+ConsoleArgumentHelp = 'Starts the interactive console'
+FileArgumentShortName = f
+FileArgumentLongName = file
+FileArgumentHelp = Files a source to a destination based on a directive.
+DirectiveArgumentShortName = d
+DirectiveArgumentLongName = directive
+DirectiveArgumentHelp = Defines the directive to use when filing. The most recent past directive will be used for the filing if this argument is omitted.
+VerboseArgumentLongName = verbose
+VerboseArgumentShortName = v
+VerboseArgumentHelp = Displays additional status information during and after filing.
+RecursiveArgumentLongName = recursive
+RecursiveArgumentShortName = r
+RecursiveArgumentHelp = Files all files in every sub-folder if the source is a folder.
+MoveArgumentLongName = move
+MoveArgumentShortName = m
+MoveArgumentHelp = Moves the source to the destination, which deletes the source after copying to the destination.
+AbsoluteArgumentLongName = absolute
+AbsoluteArgumentShortName = a
+AbsoluteArgumentHelp = Displays all paths as absolute paths.
 
 [Console]
 Introduction = Welcome to the descatter interactive console!
@@ -34,5 +53,11 @@ VerboseArgumentShortName = v
 VerboseArgumentHelp = Displays additional status information during and after filing.
 HistoryCommandProg = history
 HistoryCommandDescription = Displays a list of recently used directives that can be called by name in the 'file' command.
-HistoryTableNameColumn = Name
-HistoryTableFilePathColumn = File Path
+DirectiveTableNameColumn = Name
+DirectiveTableFileColumn = File
+DirectiveTablePathColumn = Path
+AbsoluteArgumentLongName = absolute
+AbsoluteArgumentShortName = a
+AbsoluteArgumentHelp = Displays all paths as absolute paths.
+RecentCommandProg = recent
+RecentCommandDescription = Displays the most recently used directive that is the default for subsequent calls to 'file' command.
