Refactored to remove unnecessary files. Moved the configuration code to the top-level script for the application ('descatter.py') instead of in the package. The configuration file ('descatter.ini') is for the application and not the package, so it made more sense to put it in the application code than the package. This required changing the argument loading in the command line and console interfaces. I am still working on creating the stand alone executable that displays the console.

--- a/descatter.ini
+++ b/descatter.ini
@@ -1,63 +1,2 @@
-[CommandLine]
-ShortPrefix = -
-LongPrefix = --
+[Application]
 DefaultDirective = default.xml
-ConsoleArgumentShortName = i
-ConsoleArgumentLongName = interactive
-ConsoleArgumentHelp = 'Starts the interactive console'
-FileArgumentShortName = f
-FileArgumentLongName = file
-FileArgumentHelp = Files a source to a destination based on a directive.
-DirectiveArgumentShortName = d
-DirectiveArgumentLongName = directive
-DirectiveArgumentHelp = Defines the directive to use when filing. The most recent past directive will be used for the filing if this argument is omitted.
-VerboseArgumentLongName = verbose
-VerboseArgumentShortName = v
-VerboseArgumentHelp = Displays additional status information during and after filing.
-RecursiveArgumentLongName = recursive
-RecursiveArgumentShortName = r
-RecursiveArgumentHelp = Files all files in every sub-folder if the source is a folder.
-MoveArgumentLongName = move
-MoveArgumentShortName = m
-MoveArgumentHelp = Moves the source to the destination, which deletes the source after copying to the destination.
-AbsoluteArgumentLongName = absolute
-AbsoluteArgumentShortName = a
-AbsoluteArgumentHelp = Displays all paths as absolute paths.
-
-[Console]
-Introduction = Welcome to the descatter interactive console!
-Prompt = descatter:
-Prefix = -
-DefaultDirective = default.xml
-FileCommandProg = file
-FileCommandDescription = Files a source to a destination based on a directive. The directive is saved as the default directive after successful completion of the command.
-SourceArgumentHelp = A file path, a comma-separated list of file paths, or a folder path to be filed
-DestinationArgumentHelp = The folder where the source will be filed
-HelpArgumentLongName = help
-HelpArgumentShortName = h
-HelpArgumentHelp = Shows this message and does NOT execute the command.
-DirectiveArgumentShortName = d
-DirectiveArgumentLongName = directive
-DirectiveArgumentHelp = Defines the directive to use when filing. The most recent past directive will be used for the filing if this argument is omitted.
-RecursiveArgumentLongName = recursive
-RecursiveArgumentShortName = r
-RecursiveArgumentHelp = Files all files in every sub-folder if the source is a folder.
-MoveArgumentLongName = move
-MoveArgumentShortName = m
-MoveArgumentHelp = Moves the source to the destination, which deletes the source after copying to the destination.
-NameArgumentLongName = name
-NameArgumentShortName = n
-NameArgumentHelp = Defines the directive by its name in the history of recently used directives.
-VerboseArgumentLongName = verbose
-VerboseArgumentShortName = v
-VerboseArgumentHelp = Displays additional status information during and after filing.
-HistoryCommandProg = history
-HistoryCommandDescription = Displays a list of recently used directives that can be called by name in the 'file' command.
-DirectiveTableNameColumn = Name
-DirectiveTableFileColumn = File
-DirectiveTablePathColumn = Path
-AbsoluteArgumentLongName = absolute
-AbsoluteArgumentShortName = a
-AbsoluteArgumentHelp = Displays all paths as absolute paths.
-RecentCommandProg = recent
-RecentCommandDescription = Displays the most recently used directive that is the default for subsequent calls to 'file' command.
